[package]
name = "macros"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[dependencies]
darling = "0.20.10"
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = { version = "2.0.87", features = ["extra-traits"] }

[dev-dependencies]
anyhow = "1.0.93"
futures = "0.3.31"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
